# linux400

./: .antigravityrules  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build_docker_env.sh  demo.clp  run_dev_env.sh  setup_env.sh  test_e2e_bpf.sh  test_e2e_zfs.sh
.agents/workflows/: build_toolchain.md  compile_cl_program.md
.github/: copilot-instructions.md  setup-branch-protection.sh
.github/workflows/: branch-packaging.yml  develop-ci.yml  opencode.yml  pr-ci.yml  setup-branch-protection.yml
c400_compiler/: Cargo.toml
c400_compiler/src/: main.rs
cl_compiler/: Cargo.toml
cl_compiler/clc/: Cargo.toml  build.rs
cl_compiler/clc/src/: ast.rs  codegen.rs  compiler.rs  grammar.pest  main.rs  parser.rs
cl_compiler/libl400/: Cargo.toml
cl_compiler/libl400/src/: db.rs  lib.rs
docs/: KERNEL.md  PROJECT.md  RELEASE_CHECKLIST.md  RELEASE_V1_RC.md  SUPPORT_MATRIX.md  cheetsheet.md  dax_evaluation.md  object_policy.md
docs/plan/: fase_1.md  fase_1_base_sistema.md  fase_2.md  fase_2_experiencia_runtime.md  fase_3.md  fase_3_objetos_storage.md  fase_4.md  fase_4_toolchain_workloads.md  fase_5.md  fase_5_release_v1.md  fase_6.md  fase_7.md  implementation_plan.md
l400-ebpf/: Cargo.toml
l400-ebpf-common/: Cargo.toml
l400-ebpf-common/src/: lib.rs
l400-ebpf/.cargo/: config.toml
l400-ebpf/src/: main.rs
l400-loader/: Cargo.toml
l400-loader/src/: main.rs
libl400/: Cargo.toml  build.rs
libl400/examples/: objects_v1_demo.rs  workload_demo.rs
libl400/src/: auth.rs  bdb_native.rs  bdb_shim.c  cgroup.rs  db.rs  dtaq.rs  ffi.rs  lam.rs  lib.rs  object.rs  runtime.rs  space.rs  storage.rs  usrprf.rs  util.rs  zfs.rs
os400-tui/: Cargo.toml
os400-tui/src/: app.rs  lib.rs  main.rs  style.rs
os400-tui/src/screens/: cmd_line.rs  dtaq_viewer.rs  main_menu.rs  mod.rs  object_browser.rs  work_mgmt.rs
os400-tui/src/widgets/: help_bar.rs  mod.rs
scratch/: verify_xattrs.rs
scratch/libdb/: libdb-dev_1%3a5.3.21ubuntu3_amd64.deb  libdb5.3-dev_5.3.28+dfsg2-9ubuntu1_amd64.deb
scratch/libdb/extracted/usr/share/doc/libdb-dev/: copyright
scratch/libdb/extracted53/usr/share/doc/: libdb5.3-dev
scripts/: l400_mklib.sh  l400_mkobj.sh  zfs_init.sh
scripts/runtime/: install_linux400.sh  l400-console-autologin.sh  l400-session.sh  l400-support-report.sh
scripts/test/: test_e2e_install_qemu.sh  test_loader_modes.sh  test_objects_v1_demo.sh  test_release_rc.sh  test_support_profile.sh  test_toolchain_v1_demo.sh  test_workload_demo.sh
tests/: hola_mundo.c  hola_mundo.pgm  prueba.clp  prueba.pgm
