[package]
name = "l400-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = "0.13.0"
aya-log = "0.2.0"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.34", features = ["macros", "rt", "rt-multi-thread", "signal", "time"] }
anyhow = "1.0"
libc = "0.2"
l400-ebpf-common = { path = "../l400-ebpf-common" }
