[package]
name = "l400"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
xattr = "1.3"
thiserror = "2.0"
l400-ebpf-common = { path = "../l400-ebpf-common" }
sled = "0.34"
rustix = { version = "0.38", features = ["fs", "std"] }
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cc = "1.1"
