[package]
name = "clc"
version = "0.1.0"
edition = "2021"
description = "Linux/400 Control Language Compiler"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
clap = { version = "4.4", features = ["derive"] }
# Inkwell requires a specific LLVM feature flag. Assuming LLVM 15. 
# You may need to change this (e.g., llvm14-0, llvm16-0) based on your host environment.
inkwell = { version = "0.4.0", features = ["llvm15-0"] }
