[package]
name = "clc"
version = "0.1.0"
edition = "2021"
description = "Linux/400 Control Language Compiler"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
clap = { version = "4.4", features = ["derive"] }
# Inkwell requires a specific LLVM feature flag matching the LLVM version del container.
# Ubuntu 26.04 (base del Docker) trae LLVM 21.
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
